refactor: several small improvements to notebook 01

--- a/02-slicing_and_filtering.ipynb
+++ b/02-slicing_and_filtering.ipynb
@@ -263,6 +263,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Exercise:__ Create a function `diamond` that returns a two-dimensional integer\n",
+    "array whose ones form a diamond shape, as in the following examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0]\n",
+      " [1 0 1]\n",
+      " [0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diamond(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 1 0 0]\n",
+      " [0 1 0 1 0]\n",
+      " [1 0 0 0 1]\n",
+      " [0 1 0 1 0]\n",
+      " [0 0 1 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diamond(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "📝 All of the principles we have seen extend to arrays of higher dimensions. For\n",
     "each dimension, you can specify a `<start>:<stop>:<step>` slice, separated by\n",
     "commas."
@@ -335,6 +390,36 @@
    ],
    "source": [
     "print(\"# of elements greater than two:\", np.sum(filter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "⚠️ Boolean indexing always generates a new array, even when the result is otherwise identical to the original array: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125170035610064\n",
+      "125170026575888\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([1, 2, 3, 4, 5])\n",
+    "u = v[v > 0]  # Filters the elements of v > 0, which happens to be all of v\n",
+    "\n",
+    "# Checking the memory addresses of u and v to see whether they match:\n",
+    "print(id(u))\n",
+    "print(id(v))"
    ]
   },
   {
@@ -537,7 +622,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
