--- a/04-solving_linear_equations.ipynb
+++ b/04-solving_linear_equations.ipynb
@@ -155,22 +155,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "📝 `np.linalg.solve` solves a (square) linear system $ A\\mathbf x = \\mathbf b $\n",
-    "by first finding the $ LU $ decomposition of $ A $, then rewriting the original\n",
-    "system as\n",
+    "__Exercise:__ Let $ y = a_1 x + b_1 $ and $ y = a_2 x + b_2 $ describe two\n",
+    "(non-vertical) lines.  Write a function `meeting_point` that takes as input\n",
+    "these coefficients and returns the point where the two lines meet.\n",
+    "Use the `np.linalg.solve`. Test your function on the lines\n",
     "$$\n",
-    "\\left\\{\n",
-    "\\begin{alignat*}{4}\n",
-    "L\\mathbf y &= \\mathbf b \\\\\n",
-    "U\\mathbf x &= \\mathbf y\n",
-    "\\end{alignat*}\n",
-    "\\right.\n",
+    "\\begin{align*}\n",
+    "    y &= 2x + 1 \\\\\n",
+    "    y &= -x + 4\n",
+    "\\end{align*}\n",
     "$$\n",
-    "The first of these equations can easily be solved by forward-substitution, and\n",
-    "the second by backward-substitution.  To find the $ LU $ decomposition itself,\n",
-    "Gaussian elimination is applied to $ A $. This is discussed in any Linear Algebra\n",
-    "course, where you will do many of these computations by hand."
+    "which intersect at $ (1, 3) $."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise:__ Write a procedure `meeting_planes` that computes the point where\n",
+    "three given planes \n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "    z &= a_1y + b_1x + c_1 \\\\\n",
+    "    z &= a_2y + b_2x + c_2 \\\\\n",
+    "    z &= a_3y + b_3x + c_3\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "meet. Test your code by verifying that the following three planes intersect at $ (-3, -5, -10) $:\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "    z &= x + 2y + 3 \\\\\n",
+    "    z &= 2x + y + 1 \\\\\n",
+    "    z &= -x + 3y  + 2\n",
+    "\\end{align*}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -273,6 +306,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "📝 `np.linalg.solve` solves a (square) linear system $ A\\mathbf x = \\mathbf b $\n",
+    "by first finding the $ LU $ decomposition of $ A $, then rewriting the original\n",
+    "system as\n",
+    "$$\n",
+    "\\left\\{\n",
+    "\\begin{alignat*}{4}\n",
+    "L\\mathbf y &= \\mathbf b \\\\\n",
+    "U\\mathbf x &= \\mathbf y\n",
+    "\\end{alignat*}\n",
+    "\\right.\n",
+    "$$\n",
+    "The first of these equations can easily be solved by forward-substitution, and\n",
+    "the second by backward-substitution.  To find the $ LU $ decomposition itself,\n",
+    "Gaussian elimination is applied to $ A $. This is discussed in any Linear Algebra\n",
+    "course, where you will do many of these computations by hand."
+   ]
   },
   {
    "cell_type": "markdown",
