--- a/05-array_attributes_and_methods.ipynb
+++ b/05-array_attributes_and_methods.ipynb
@@ -481,6 +481,237 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "📝 To get a listing of all attributes and methods that can be used with an object $ A $,\n",
+    "you can run the Python command `dir(A)`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T',\n",
+       " '__abs__',\n",
+       " '__add__',\n",
+       " '__and__',\n",
+       " '__array__',\n",
+       " '__array_finalize__',\n",
+       " '__array_function__',\n",
+       " '__array_interface__',\n",
+       " '__array_prepare__',\n",
+       " '__array_priority__',\n",
+       " '__array_struct__',\n",
+       " '__array_ufunc__',\n",
+       " '__array_wrap__',\n",
+       " '__bool__',\n",
+       " '__buffer__',\n",
+       " '__class__',\n",
+       " '__class_getitem__',\n",
+       " '__complex__',\n",
+       " '__contains__',\n",
+       " '__copy__',\n",
+       " '__deepcopy__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__divmod__',\n",
+       " '__dlpack__',\n",
+       " '__dlpack_device__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__float__',\n",
+       " '__floordiv__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__iadd__',\n",
+       " '__iand__',\n",
+       " '__ifloordiv__',\n",
+       " '__ilshift__',\n",
+       " '__imatmul__',\n",
+       " '__imod__',\n",
+       " '__imul__',\n",
+       " '__index__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__invert__',\n",
+       " '__ior__',\n",
+       " '__ipow__',\n",
+       " '__irshift__',\n",
+       " '__isub__',\n",
+       " '__iter__',\n",
+       " '__itruediv__',\n",
+       " '__ixor__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lshift__',\n",
+       " '__lt__',\n",
+       " '__matmul__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__neg__',\n",
+       " '__new__',\n",
+       " '__or__',\n",
+       " '__pos__',\n",
+       " '__pow__',\n",
+       " '__radd__',\n",
+       " '__rand__',\n",
+       " '__rdivmod__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rfloordiv__',\n",
+       " '__rlshift__',\n",
+       " '__rmatmul__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__ror__',\n",
+       " '__rpow__',\n",
+       " '__rrshift__',\n",
+       " '__rshift__',\n",
+       " '__rsub__',\n",
+       " '__rtruediv__',\n",
+       " '__rxor__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__truediv__',\n",
+       " '__xor__',\n",
+       " 'all',\n",
+       " 'any',\n",
+       " 'argmax',\n",
+       " 'argmin',\n",
+       " 'argpartition',\n",
+       " 'argsort',\n",
+       " 'astype',\n",
+       " 'base',\n",
+       " 'byteswap',\n",
+       " 'choose',\n",
+       " 'clip',\n",
+       " 'compress',\n",
+       " 'conj',\n",
+       " 'conjugate',\n",
+       " 'copy',\n",
+       " 'ctypes',\n",
+       " 'cumprod',\n",
+       " 'cumsum',\n",
+       " 'data',\n",
+       " 'diagonal',\n",
+       " 'dot',\n",
+       " 'dtype',\n",
+       " 'dump',\n",
+       " 'dumps',\n",
+       " 'fill',\n",
+       " 'flags',\n",
+       " 'flat',\n",
+       " 'flatten',\n",
+       " 'getfield',\n",
+       " 'imag',\n",
+       " 'item',\n",
+       " 'itemset',\n",
+       " 'itemsize',\n",
+       " 'max',\n",
+       " 'mean',\n",
+       " 'min',\n",
+       " 'nbytes',\n",
+       " 'ndim',\n",
+       " 'newbyteorder',\n",
+       " 'nonzero',\n",
+       " 'partition',\n",
+       " 'prod',\n",
+       " 'ptp',\n",
+       " 'put',\n",
+       " 'ravel',\n",
+       " 'real',\n",
+       " 'repeat',\n",
+       " 'reshape',\n",
+       " 'resize',\n",
+       " 'round',\n",
+       " 'searchsorted',\n",
+       " 'setfield',\n",
+       " 'setflags',\n",
+       " 'shape',\n",
+       " 'size',\n",
+       " 'sort',\n",
+       " 'squeeze',\n",
+       " 'std',\n",
+       " 'strides',\n",
+       " 'sum',\n",
+       " 'swapaxes',\n",
+       " 'take',\n",
+       " 'tobytes',\n",
+       " 'tofile',\n",
+       " 'tolist',\n",
+       " 'tostring',\n",
+       " 'trace',\n",
+       " 'transpose',\n",
+       " 'var',\n",
+       " 'view']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For instance, if A is any array:\n",
+    "A = np.array([3, 5, 11])\n",
+    "dir(A)  # All objects in the namespace associated with A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "📝 In Jupyter notebooks, typing `?` before or after an object or function name\n",
+    "(e.g., `A?` or `?np.array`) displays detailed documentation about it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "a.sum(axis=None, dtype=None, out=None, keepdims=False, initial=0, where=True)\n",
+      "\n",
+      "Return the sum of the array elements over the given axis.\n",
+      "\n",
+      "Refer to `numpy.sum` for full documentation.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "numpy.sum : equivalent function\n",
+      "\u001b[0;31mType:\u001b[0m      builtin_function_or_method"
+     ]
+    }
+   ],
+   "source": [
+    "A.sum?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "__Exercise:__ Given a $ 2D $ array `data` of shape $ 100 \\times 5 $ representing a\n",
     "dataset where each row is an entry and each column is a different variable:\n",
     "\n",
@@ -1205,7 +1436,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1219,7 +1450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
