feat: add logspace to notebook 01 and RGB pictures as 3D arrays

--- a/01-introduction_to_numpy_arrays.ipynb
+++ b/01-introduction_to_numpy_arrays.ipynb
@@ -185,7 +185,8 @@
    "source": [
     "__Exercise:__ Define the vector\n",
     "$ \\mathbf a = \\frac{1}{2} \\big(1, 1, 1, 1 \\big) \\in \\mathbb R^4 $ as a NumPy array.\n",
-    "What is the length (norm) of $ \\mathbf a $?"
+    "Compute the length (norm) of $ \\mathbf a $ by hand and compare your answer to\n",
+    "the result obtained through the function `np.linalg.norm`."
    ]
   },
   {
@@ -563,8 +564,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no bound on the number of dimensions that an array can have, although\n",
-    "for most applications, arrays of rank greater than $ 4 $ are rarely used."
+    "There is no bound on the number of dimensions that an array can have. Even\n",
+    "though most applications only require arrays of ranks $ 1 $ and $ 2 $,\n",
+    "higher-dimensional arrays do arise naturally in some areas.  For instance, in\n",
+    "image processing, RGB pictures can be seen as $ 3D $ arrays with dimensions for\n",
+    "height, width, and color channels (red, green, blue). That is, an image such as\n",
+    "the one below can be decomposed into three $ 2D $ arrays, each representing the\n",
+    "intensity of one color at every pixel.\n",
+    "\n",
+    "<img src=\"RGB_separation.jpg\" alt=\"RGB separation\" width=\"150\" height=\"450\">\n",
+    "\n",
+    "\n",
+    "Similarly, video processing uses $ 4D $ arrays (time, channels, height, width)\n",
+    "and machine learning often uses multi-dimensional arrays."
    ]
   },
   {
@@ -715,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $ 4.2 $ Generating sequences with `arange` and `linspace`"
+    "### $ 4.2 $ Generating sequences with `arange`"
    ]
   },
   {
@@ -732,7 +744,7 @@
    "outputs": [],
    "source": [
     "digits = np.arange(10)\n",
-    "print(type(digits), digits)\n"
+    "print(type(digits), digits)"
    ]
   },
   {
@@ -816,7 +828,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, with `linspace` we can construct an array containing evenly spaced\n",
+    "### $ 4.3 $ Generating sequences with `linspace` and `logspace`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With `linspace` we can construct an array containing evenly spaced\n",
     "values inside a specified interval. The syntax is similar to that of `arange`,\n",
     "except that _the stop value in the second argument is included_ in the result, and\n",
     "_the third argument gives the number of values to be generated_, instead of the\n",
@@ -888,6 +907,86 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `logspace` function generates points that are evenly spaced on a\n",
+    "_logarithmic_ scale. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "powers = np.logspace(-1, 2, 4)\n",
+    "print(powers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Formally, `logspace(start, stop, num)` creates an array of values where each\n",
+    "element is calculated as:\n",
+    "$$\n",
+    "    10^{\\text{start}} \\times 10^{\\,i \\times \\frac{\\text{stop}-\\text{start}}{\\text{num}-1}}\n",
+    "    \\quad \\text{for $ i = 0, 1, 2, ..., \\text{num} - 1 $}\\,.\n",
+    "$$\n",
+    "Here `num` is the number of elements in the resulting array.  Thus, it is the\n",
+    "_exponents_ of the numbers in the sequence that are evenly spaced, instead of\n",
+    "the numbers themselves."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise:__ Create a logarithmic space from $ 10^{-2} $ to $ 10^2 $ with $ 20\n",
+    "$ points.  Calculate and print the ratios between consecutive points to verify\n",
+    "they are constant (which is a property of logarithmic spacing)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This type of sequence is useful for plotting data that follow a power law or\n",
+    "that have a large range, for creating frequency axes for audio processing, and\n",
+    "for setting learning rates in ML algorithms that require exponential decay,\n",
+    "among other applications.\n",
+    "\n",
+    "While the default base for `logspace` is $ 10 $, we can use any other positive\n",
+    "base by changing the `base` parameter. Base $ 2 $ is particularly useful\n",
+    "in computing applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise:__ Generate all powers of $ 2 $ from $ 1 = 2^0 $ to $ 2^9 = 512 $\n",
+    "by modifying the following code. Print the resulting array to check your answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# powers_of_two = np.logspace(<start>, <stop>, <num>, base=2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1061,7 +1160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "islp",
    "language": "python",
    "name": "python3"
   },
