feat: improve notebook 02, add some figures

--- a/01-introduction_to_numpy_arrays.ipynb
+++ b/01-introduction_to_numpy_arrays.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "## $ \\S 2 $ Arrays\n",
     "\n",
-    "<img src=\"NumPy.png\" width=\"105\" height=\"38\" alt=\"NumPy\">, which stands for _Numerical Python_, is a foundational package\n",
+    "<img src=\"notebook_1_NumPy.png\" width=\"105\" height=\"38\" alt=\"NumPy\">, which stands for _Numerical Python_, is a foundational package\n",
     "for scientific computing in Python. It is almost universally imported with the\n",
     "`np` alias, as follows:"
    ]
@@ -383,7 +383,7 @@
     "`'X'` and `'O'` for the pieces placed by each of the two players.\n",
     "Set up the board for the following game state:\n",
     "\n",
-    "<img src=\"tic_tac_toe.png\" width=\"200\">"
+    "<img src=\"notebook_1_tic_tac_toe.png\" width=\"200\">"
    ]
   },
   {
@@ -516,13 +516,13 @@
     "A $ 3D $ array is to a matrix as a solid block is to a rectangle. In other words,\n",
     "a rank $ 3 $ array is one having three axes instead of just two.\n",
     "\n",
-    "<img src=\"array_3D.png\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"notebook_1_array_3D.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "__Exercise:__ What is the rank and shape of the array depicted above?\n",
     "\n",
     "Here's a concrete example of a $ 3D $ array of shape $ 2 \\times 2 \\times 2 $.\n",
-    "Think of it as an array having $ 2 $ \"hyper-rows\",\n",
-    "each of which is a $ 2 \\times 2 $ matrix."
+    "Think of it as an array having $ 2 $ layers, each of which is a $ 2 \\times 2 $\n",
+    "matrix."
    ]
   },
   {
@@ -531,10 +531,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[[1, 2],   # The first \"hyper-row\" is a 2x2 matrix\n",
+    "A = np.array([[[1, 2],   # The first layer is a 2x2 matrix\n",
     "               [3, 4]], \n",
     "\n",
-    "              [[5, 6],   # The second \"hyper-row\" is also a 2x2 matrix\n",
+    "              [[5, 6],   # The second layer is also a 2x2 matrix\n",
     "               [7, 8]]])\n",
     "print(A)"
    ]
@@ -572,7 +572,7 @@
     "the one below can be decomposed into three $ 2D $ arrays, each representing the\n",
     "intensity of one color at every pixel.\n",
     "\n",
-    "<img src=\"RGB_separation.jpg\" alt=\"RGB separation\" width=\"150\" height=\"450\">\n",
+    "<img src=\"notebook_1_RGB_separation.jpg\" alt=\"RGB separation\" width=\"200\" height=\"600\">\n",
     "\n",
     "\n",
     "Similarly, video processing uses $ 4D $ arrays (time, channels, height, width)\n",
@@ -992,155 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $ \\S 5 $ Accessing and modifying individual array elements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Recall that lists in Python are __mutable__, meaning that we may modify\n",
-    "individual elements of a list:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "primes = [199, 1_999, 19_999]\n",
-    "primes[2] = 19"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In contrast, a tuple is __immutable__. We can still access its\n",
-    "elements through `[]`, but we can't modify them:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fruits = ('🍎', '🍊', '🍍')\n",
-    "print(fruits[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fruits[0] = '🍉'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NumPy arrays are also mutable, like lists. Consider the following vector $ \\mathbf{a} $:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.array([1, 2, 3])\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To access or modify the $ 0 $-th element of $ \\mathbf a $ (recall that we always\n",
-    "count from $ 0 $ in Python), we use the same syntax as we would if it were a\n",
-    "list:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(a[0])  # Access 0-th element of `a`\n",
-    "a[0] = -1    # Modify this element\n",
-    "print(a)     # Print the result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we are dealing with a $ 2D $ array, we use `[i, j]` to access its $ (i, j) $-th entry, that is, the element in row $ i $ and column $ j $:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.ones((2, 2))\n",
-    "print(\"Before modifications:\")\n",
-    "print(A, '\\n')\n",
-    "\n",
-    "A[0, 1] = 0\n",
-    "A[1, 0] = 0 \n",
-    "print(\"After modifications:\")\n",
-    "print(A)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In general, when dealing with an $ n $-dimensional array, use `[k_1, k_2, ..., k_n]` to access its element having indices $ k_1, k_2, \\cdots, k_n $, respectively."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Exercise:__ Build a \"$ 3D $ identity array\" $ M $ of shape $ (5, 5, 5) $ by\n",
-    "first populating it with zeros, then setting all elements with indices\n",
-    "of the form $ (i, i, i) $ equal to $ 1 $ in the following two ways: \n",
-    "\n",
-    "(a) Using a `for` loop.\n",
-    "\n",
-    "(b) With the single call `fill_diagonal(M, 1)`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Populate M with zeros:\n",
-    "# M = ...\n",
-    "\n",
-    "# Set diagonal elements equal to 1:\n",
-    "# ...\n",
-    "\n",
-    "# Print the result:\n",
-    "# print(M)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## $ \\S 6 $ Other NumPy features\n",
+    "## $ \\S 5 $ Other NumPy features\n",
     "\n",
     "As we will see later, arrays are far more efficient and convenient for numerical\n",
     "computation than Python's built-in data types such as lists, both in memory and\n",
@@ -1155,6 +1007,84 @@
     "* Integration with several types of databases and file formats for data import/export.\n",
     "\n",
     "We will meet and use some of these in other notebooks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "⚡️ __Exercise:__ Create a function `diamond` that returns a two-dimensional integer\n",
+    "array whose ones form a diamond shape, as in the following examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(diamond(0))\n",
+    "# Should print:\n",
+    "# [[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(diamond(1))\n",
+    "# Should print:\n",
+    "# [[0 1 0]\n",
+    "#  [1 0 1]\n",
+    "#  [0 1 0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(diamond(2))\n",
+    "# Should print:\n",
+    "# [[0 0 1 0 0]\n",
+    "#  [0 1 0 1 0]\n",
+    "#  [1 0 0 0 1]\n",
+    "#  [0 1 0 1 0]\n",
+    "#  [0 0 1 0 0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Hint:_ Note that for each element equal to $ 1 $, the sum of the distances to\n",
+    "the central row and central column is constant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diamond(n):\n",
+    "    \"\"\"\n",
+    "    Create a 2D array with ones forming a diamond shape.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    n : int\n",
+    "        Size parameter determining diamond dimensions.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    numpy.ndarray\n",
+    "        2D array with ones forming a diamond shape.\n",
+    "    \"\"\"\n",
+    "    # Shape of the array will be (2 * n + 1) x (2 * n + 1)"
    ]
   }
  ],
