--- a/01-introduction_to_numpy_arrays.ipynb
+++ b/01-introduction_to_numpy_arrays.ipynb
@@ -1090,7 +1090,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "islp",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
