feat: completely rewrote notebook 04, adding several topics

--- a/01-introduction_to_numpy_arrays/01-introduction_to_numpy_arrays.ipynb
+++ b/01-introduction_to_numpy_arrays/01-introduction_to_numpy_arrays.ipynb
@@ -702,9 +702,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also create a new array of specified shape and data type, but without\n",
+    "initializing the entries, by means of the function `empty`. The uninitialized\n",
+    "values are whatever happens to be in the allocated memory location at that time,\n",
+    "which can lead to unpredictable results if the array is used without first\n",
+    "assigning proper values. On the other hand, this approach can be more efficient,\n",
+    "since it avoids the computational cost of setting each element to some default\n",
+    "value only to modify it later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uninitialized array:\n",
+      "[[5. 5.]\n",
+      " [5. 5.]]\n",
+      "\n",
+      "After initialization:\n",
+      "[[5. 3.]\n",
+      " [3. 5.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an uninitialized array:\n",
+    "uninitialized_array = np.empty((2, 2), dtype=float)\n",
+    "print(\"Uninitialized array:\")\n",
+    "print(uninitialized_array)\n",
+    "\n",
+    "# Initialize the array with new values:\n",
+    "uninitialized_array.fill(5.0)\n",
+    "uninitialized_array[0, 1] = uninitialized_array[1, 0] = 3\n",
+    "print(\"\\nAfter initialization:\")\n",
+    "print(uninitialized_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, we can create a new array _of the same shape and datatype_ as a\n",
-    "given array $ A $ but filled with zeros, ones or some other specified value with the\n",
-    "functions `zeros_like`, `ones_like` and `full_like`, respectively:"
+    "given array $ A $ but filled with zeros, ones, some other specified value or\n",
+    "uninitialized garbage values with the functions `zeros_like`, `ones_like`,\n",
+    "`full_like` and `empty_like`, respectively:"
    ]
   },
   {
@@ -1090,7 +1136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "islp",
    "language": "python",
    "name": "python3"
   },
