--- a/02-slicing_and_filtering/02-slicing_and_filtering.ipynb
+++ b/02-slicing_and_filtering/02-slicing_and_filtering.ipynb
@@ -896,7 +896,7 @@
     "\n",
     "(b) Numbers that are either negative or greater than $ 20 $.\n",
     "\n",
-    "(c) Numbers that are either odd or positive, but not both."
+    "(c) Numbers that are either divisible by $ 3 $ or positive, but not both."
    ]
   },
   {
@@ -911,6 +911,190 @@
     "# (b)\n",
     "\n",
     "# (c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $ 5.3 $ The `where` function\n",
+    "\n",
+    "The `np.where` function serves two primary purposes.  When called on a\n",
+    "single argument as `np.where(condition)`, the result consists of the\n",
+    "_indices_ where this condition is true.  This provides a powerful way to locate\n",
+    "elements of interest within an array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices of negative elements: (array([1, 2, 2]), array([1, 0, 2]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2, 4], \n",
+    "              [5, -3, 9],\n",
+    "              [-7, 6, -8]])\n",
+    "\n",
+    "negative_indices = np.where(A < 0)\n",
+    "print(\"Indices of negative elements:\", negative_indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, note that the first array in the tuple yields the row indices and\n",
+    "the second the column indices of the negative elements in $ A $. When we\n",
+    "pair these indices in order, we get the coordinates of these elements inside\n",
+    "$ A $, e.g., the entry `A[2, 0]` is $ -7 $. If we want the elements themselves\n",
+    "for which the condition holds, we can then use these indices exactly as in $ \\S 4.1 $:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative elements in A:  [-5 -7 -9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Negative elements in A: \", A[negative_indices])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "📝 In the single-parameter version of `where`, the argument must be a Boolean array, and the result\n",
+    "will simply be the positions (indices) of the elements that are `True`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise:__ Referring to the same matrix $ A $ as above:\n",
+    "\n",
+    "(a) Determine the row and column indices of the elements in $ A $\n",
+    "that leave a remainder of $ 1 $ when divided by $ 3 $.\n",
+    "\n",
+    "(b) Use the indices obtained in (a) to construct an array consisting of the\n",
+    "elements of $ A $ that satisfy the stated condition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To illustrate the second use of the `where` function, consider the following simple array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2 -3  4 -5  6 -7  8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = np.array([1, 2, -3, 4, -5, 6, -7, 8])\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suppose that we want to replace those elements in `numbers` that are negative by $ 0 $.\n",
+    "We can do this as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After replacing negatives with zeros: [1 2 0 4 0 6 0 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Replace negative values with zeros, keep positive values:\n",
+    "result = np.where(numbers > 0, numbers, 0)\n",
+    "print(\"After replacing negatives with zeros:\", result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus, in the form `np.where(condition, x, y)`, this function can work as a\n",
+    "vectorized ternary operator (similar to `? :` in C), allowing us to make\n",
+    "element-wise choices between two arrays based on a condition. \n",
+    "\n",
+    "__Exercise:__ Suppose that we are building a weather forecast app. We need\n",
+    "to be able to display the temperatures in Fahrenheit or Celsius degrees\n",
+    "according to whether the user is US-based or not. Use `where` to accomplish\n",
+    "this for the following set of $ 10 $ temperatures:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperatures to display (F for US, C for others):\n",
+      " [ 68.  77.  30.  35. 104.  15.  50.  41.   0.  23.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array of temperatures in Celsius:\n",
+    "celsius = np.array([20, 25, 30, 35, 40, 15, 10, 5, 0, -5])\n",
+    "# Corresponding array of temperatures in Fahrenheit (F = C * 9/5 + 32):\n",
+    "fahrenheit = celsius * 9/5 + 32\n",
+    "# Boolean mask that tells whether the user is US-based (True) or not (False):\n",
+    "is_us_visitor = np.array([True, True, False, False, True, False, True, True, False, True])\n",
+    "\n",
+    "# Use np.where to display temperatures in appropriate units based on visitor location:\n",
+    "# display_temps = ???\n",
+    "\n",
+    "print(\"Temperatures to display (F for US, C for others):\\n\", np.round(display_temps))"
    ]
   }
  ],
