fix: fix equation in notebook 04 that was not displaying correctly on GitHub

--- a/04-solving_equations/04-solving_equations.ipynb
+++ b/04-solving_equations/04-solving_equations.ipynb
@@ -760,19 +760,23 @@
    "source": [
     "__Exercise:__ Using `lstsq`, solve or find approximate solutions to the following systems of equations:\n",
     "$$\n",
+    "\\begin{array}{cc}\n",
     "\\text{(a)} \\quad\n",
-    "\\left\\{\\begin{alignat*}{2}\n",
-    "x\\  &+\\ y\\ &=&\\ 2\\\\\n",
-    "2x\\ &+\\ 2y\\ &=&\\ 4\n",
-    "\\end{alignat*}\\right.\n",
-    "\n",
-    "\\qquad \\qquad\n",
+    "\\left\\{\n",
+    "\\begin{array}{rcl}\n",
+    "x & + & y & =\\ 2\\\\\n",
+    "2x & + & 2y & =\\ 4\n",
+    "\\end{array}\n",
+    "\\right.\n",
+    "& \\qquad\n",
     "\\text{(b)} \\quad\n",
-    "\n",
-    "\\left\\{\\begin{alignat*}{2}\n",
-    "x\\  &+\\ y\\ &=&\\ 2\\\\\n",
-    "2x\\ &+\\ 2y\\ &=&\\ 2\n",
-    "\\end{alignat*}\\right.\n",
+    "\\left\\{\n",
+    "\\begin{array}{rcl}\n",
+    "x & + & y &=\\ 2\\\\\n",
+    "2x & + & 2y &=\\ 2\n",
+    "\\end{array}\n",
+    "\\right.\n",
+    "\\end{array}\n",
     "$$\n",
     "\n",
     "(c) Find (by hand) _all_ solutions to (a) and verify that the least-squares\n",
