refactor: improved notebook 05, added a figure

--- a/02-slicing_and_filtering/02-slicing_and_filtering.ipynb
+++ b/02-slicing_and_filtering/02-slicing_and_filtering.ipynb
@@ -1060,8 +1060,8 @@
    "metadata": {},
    "source": [
     "Thus, in the form `np.where(condition, x, y)`, this function can work as a\n",
-    "vectorized ternary operator (similar to `? :` in C), allowing us to make\n",
-    "element-wise choices between two arrays based on a condition. \n",
+    "vectorized ternary operator (similar to `? :` in C/C++/Java), allowing us to\n",
+    "make element-wise choices between two arrays based on a condition. \n",
     "\n",
     "__Exercise:__ Suppose that we are building a weather forecast app. We need\n",
     "to be able to display the temperatures in Fahrenheit or Celsius degrees\n",
