--- a/01-introduction_to_numpy_arrays/01-introduction_to_numpy_arrays.ipynb
+++ b/01-introduction_to_numpy_arrays/01-introduction_to_numpy_arrays.ipynb
@@ -471,18 +471,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise:__ How would you create the matrix\n",
+    "__Exercise:__ How can we instantiate the matrix\n",
     "$$\n",
-    "\\mathbf B = \\begin{equation*}\n",
-    "\\left[ \\begin{array}{cc}\n",
-    "b_{11} & b_{12} \\\\\n",
-    "b_{21} & b_{22} \\\\\n",
-    "b_{31} & b_{32} \\\\\n",
-    "b_{41} & b_{42}\n",
+    "\\mathbf{B} = \n",
+    "\\left[ \\begin{array}{ccc}\n",
+    "b_{11} & b_{12} & b_{13} \\\\\n",
+    "b_{21} & b_{22} & b_{23} \\\\\n",
+    "b_{31} & b_{32} & b_{33} \\\\\n",
+    "b_{41} & b_{42} & b_{43}\n",
     "\\end{array} \\right]\n",
-    "\\end{equation*}\n",
     "$$\n",
-    "where $ b_{ij} = i \\cdot j $?"
+    "where $ b_{ij} = i + j $? Typing in each element manually would be tedious\n",
+    "and error-prone. Instead, we can use the `fromfunction` procedure that\n",
+    "constructs an array by applying a Python function to each of its indices.\n",
+    "The basic syntax is: `np.fromfunction(function, shape)`. Use this to\n",
+    "construct $ B $. _Hint:_ First define a function (using `def` or `lambda`) that\n",
+    "maps $ (i, j) $ to $ i + j $."
    ]
   },
   {
@@ -496,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "⚡ __Exercise:__ Recall the matrix $ \\mathbf{B} = \\big(b_{ij}\\big) = (i \\cdot j) $ from\n",
+    "⚡ __Exercise:__ Recall the matrix $ \\mathbf{B} = \\big(b_{ij}\\big) = (i + j) $ from\n",
     "a previous exercise. Use a double list comprehension to generate the $ b_{ij} $\n",
     "as a list of lists and then convert this to an array. _Hint:_ You will need a\n",
     "double comprehension, of the form `[[... for j in ...] for i in ...]`. "
@@ -1136,7 +1140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "islp",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
